typescript/checker/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement2.ts.stderr
error: TS1115
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement2.ts:3:5
  |
3 |     continue;
  |     ^^^^^^^^^

